--- a/static/assets/v1/kiosk/css/common.css
+++ b/static/assets/v1/kiosk/css/common.css
@@ -93,7 +93,7 @@ caption {font-size:0; width:0; height:0; line-height:0; text-indent:-999rem; ove
 .show {display:block}
 .hide {display:none}
 .ellipsis {overflow:hidden; text-overflow:ellipsis; white-space:nowrap;} /* 1줄 말줄임 */
-.lineClamp {-webkit-line-clamp:2; -webkit-box-orient:vertical; display:-webkit-box; overflow:hidden; text-overflow:ellipsis;} /* 2줄 말줄임 */
+.lineClamp {overflow:hidden; -webkit-line-clamp:2; -webkit-box-orient:vertical; display:-webkit-box; text-overflow:ellipsis;} /* 2줄 말줄임 */
 .fz42 {font-size:4.2rem !important;}
 .fz36 {font-size:3.6rem !important;}
 .fz30 {font-size:3rem !important;}
@@ -172,22 +172,25 @@ select::-ms-expand {display:none;}
 .btnWrap {display:flex;}
 .btnWrap.lineTop {padding-top:4rem; border-top:.2rem solid #e6e6e6;}
 
-.btnWrap .btn {display:inline-flex; justify-content:center; align-items:center; width:100%; height:13rem; padding:0 2rem; background:var(--main-color); border:.2rem solid var(--main-color); border-radius:.6rem; line-height:1.3; color:#fff; font-size:3.6rem; text-align:center; box-sizing:border-box; transition:all .3s ease;} /* 기본 파랑 */
+button.btn, a.btn {display:inline-flex; justify-content:center; align-items:center; position:relative; height:13rem; padding:0 3rem; background:var(--main-color); border:.2rem solid var(--main-color); border-radius:.6rem; line-height:1.3; color:#fff; font-size:3.6rem; text-align:center; box-sizing:border-box; transition:all .3s ease;} /* 기본 파랑 */
+button.btn::before, a.btn::before {content:''; display:inline-block; position:absolute; top:0; left:0; width:100%; height:100%; border:.4rem solid rgba(38,38,38,0); box-sizing:border-box;}
+.btnWrap .btn {width:100%;}
 .btnWrap .btn + .btn {margin-left:4rem;}
 
 .btnWrap.flexColumn .btn + .btn {margin-left:0; margin-top:2rem;}
 
-.btn > span {transition:all .3s ease;}
-/* .btn:active {box-shadow:inset .3rem .2rem 2rem .1rem rgba(0, 0, 0, .2);}
-.btn:active > span {transform:scale(0.98);} */
-
 .btn.sty1 {background:#fff; border-color:#262626; color:var(--font-color);}
 .btn.sty2 {background:#262626; border-color:#262626; color:#fff;}
-.btn.sty3 {background:rgba(0, 0, 0, 0); color:#fff; border:.1rem solid #fff;}
+
+button.btn:active, a.btn:active {background:#0653b6;}
+.btn.sty1:active {background:#fff;}
+.btn.sty1:active::before {border-color:rgba(38,38,38,1);}
+.btn.sty2:active {background:#4d4d4d;}
+
 .btn.disabled, .btn:disabled, .btnR.disabled, .btnR:disabled {background:#ddd; color:#666; border:.2rem solid #ddd;}
 
-.btnWrap .btn.h110 {height:11rem; font-size:3rem;}
-.btnWrap .btn.h90 {height:9rem; font-size:3rem;}
+.btn.h110 {height:11rem; font-size:3rem;}
+.btn.h90 {height:9rem; font-size:3rem;}
 
 /* .btns.bot {position:fixed; left:0; bottom:0; width:100%;}  *//* 버튼 하단고정 */
 
@@ -382,7 +385,7 @@ select::-ms-expand {display:none;}
 .programInfo .tagBox {display:flex;}
 .programInfo .tag {display:inline-block; padding:.2rem .5rem; background:#e6e6e6; font-size:2.6rem; font-weight:bold;}
 .programInfo .tag + .tag {margin-left:1.5rem;}
-.programInfo .tit {margin:1.5rem 0 1.4rem; font-size:3.6rem; -webkit-line-clamp:2; -webkit-box-orient:vertical; display:-webkit-box; overflow:hidden; text-overflow:ellipsis;}
+.programInfo .tit {overflow:hidden; margin:1.5rem 0 1.4rem; font-size:3.6rem; -webkit-line-clamp:2; -webkit-box-orient:vertical; display:-webkit-box; text-overflow:ellipsis;}
 .programInfo .info {font-size:3rem; font-weight:300;}
 
 
@@ -413,3 +416,34 @@ select::-ms-expand {display:none;}
 .stepBox li.active {color:var(--font-color);}
 .stepBox li.next {border-color:#e6e6e6; color:#bbb;}
 .stepBox li > strong {margin-right:1.5rem;}
+
+.reserveBox {display:flex; padding:6rem; border:.2rem solid #e6e6e6; box-sizing:border-box;}
+.reserveBox p.productName {display:flex; align-items:center; min-height:9rem; font-size:4.2rem; word-break:break-all;}
+.productName span {overflow:hidden; -webkit-line-clamp:2; -webkit-box-orient:vertical; display:-webkit-box; text-overflow:ellipsis;}
+
+.reserveBox .left {flex:1; padding-right:6rem; box-sizing:border-box;}
+.reserveBox .right {padding-left:6rem; border-left:.2rem solid #e6e6e6; box-sizing:border-box;}
+
+.reserveBox .productName, .reserveBox .countNum {margin:2.5rem 0;}
+.countNum {display:inline-flex; align-items:center;}
+.countNum button {display:inline-block; position:relative; width:9rem; height:9rem;}
+.countNum button::after {content:''; display:inline-block; position:absolute; top:0; right:0; width:100%; height:100%; border:.2rem solid #262626; border-radius:.6rem; box-sizing:border-box;}
+.countNum button:active:after {border-width:.4rem;}
+.countNum button > span {display:inline-block; position:relative; width:100%; height:100%; text-indent:-999rem;}
+.countNum button > span::before {content:''; display:inline-block; position:absolute; top:50%; left:50%; width:3.6rem; height:.3rem; background:#262626; transform:translate(-50%, -50%);}
+.countNum .btnPlus > span::after {content:''; display:inline-block; position:absolute; top:50%; left:50%; width:.3rem; height:3.6rem; background:#262626; transform:translate(-50%, -50%);}
+.countNum .count {display:flex; justify-content:center; align-items:center; width:14rem; height:9rem; font-size:4.2rem; color:var(--font-color);}
+.countNum .count > span {margin-right:1rem;}
+
+.carBox {margin:3rem 0 4rem; padding:3rem 6rem 6rem; border:.2rem solid #e6e6e6; box-sizing:border-box;}
+.carBox .info {display:flex; align-items:center;}
+.carBox .info .txt {}
+.carBox .info .btn {margin-left:auto;}
+.carBox .imgBox {margin-top:1rem;}
+
+.carBox .series {margin-top:3rem;}
+.carBox .name {margin-top:2rem; font-size:4.2rem;}
+
+.paymentAmount {display:flex; padding:5rem 0; border-top:.2rem solid #bbb; font-size:4.2rem; box-sizing:border-box;}
+.paymentAmount dt {}
+.paymentAmount dd {margin-left:auto; font-weight:bold;}
